cmake_minimum_required(VERSION 3.21)
project(CS112_2022_2nd_GroupA_S9_S10_20210312_20210500_20211026_A4)

set(CMAKE_CXX_STANDARD 14)

add_executable(loginApp Assignment-4/CS112-203-2nd-GroupA-S9-S10-20210312-20210500-20211026-A4-LoginApp.cpp)
add_executable(textEditor Assignment-4/CS112-203-2nd-GroupA-S9-S10-20210312-20210500-20211026-A4-TextEditor.cpp)