cmake_minimum_required(VERSION 3.22)
project(Assignment_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment_4
        CS112-203-2nd-GroupA-S9-S10-20210312-20210500-20211026-A4-TextEditor.cpp)
add_executable(loginapp CS112-203-2nd-GroupA-S9-S10-20210312-20210500-20211026-A4-LoginApp.cpp)
